[tool.poetry]
name = "poetry-example"
version = "0.1.0"
description = "Pytorch example"
authors = ["Bob Kozdemba <bkozdemba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytorch = "^1.0.2"
torchvision = "^0.12.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
